[metadata]
name = legos.xkcd
version = 0.3.0
url = https://github.com/Legobot/legos.xkcd
author = Bren Briggs, Drew Pearce
description = xkcd comic fetcher plugin for Legobot
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3

[options]
install_requires =
    legobot>=1.3.6,<2.0.0
namespace_packages =
    legos
packages = find:
